# anima-agent-rs

./: .gitignore  CLAUDE.md  Cargo.toml  MIGRATION_STATUS.md  README.md  README.zh-CN.md  anima.example.toml
crates/anima-cli/: Cargo.toml
crates/anima-cli/src/: main.rs
crates/anima-runtime/: Cargo.toml
crates/anima-runtime/src/: agent.rs  agent_classifier.rs  agent_executor.rs  agent_intelligent_router.rs  agent_orchestrator.rs  agent_parallel_pool.rs  agent_specialist_pool.rs  agent_types.rs  agent_worker.rs  ai_classifier.rs  bootstrap.rs  bus.rs  channel.rs  cli.rs  lib.rs  metrics.rs  pipeline.rs  support.rs  task_classifier.rs
crates/anima-runtime/src/agent/: agentic_loop_runner.rs  context_types.rs  core.rs  escalation.rs  event_emitter.rs  executor.rs  facade.rs  inbound_pipeline.rs  initial_execution.rs  lifecycle.rs  mod.rs  question_continuation.rs  requirement.rs  runtime_error.rs  runtime_helpers.rs  runtime_ids.rs  session_bootstrap.rs  suspension.rs  types.rs  upstream_resolution.rs  worker.rs
crates/anima-runtime/src/bus/: bounded.rs  core.rs  message.rs
crates/anima-runtime/src/cache/: lru.rs  mod.rs  ttl.rs
crates/anima-runtime/src/channel/: adapter.rs  dispatch.rs  http.rs  message.rs  rabbitmq.rs  registry.rs  session.rs
crates/anima-runtime/src/classifier/: ai.rs  mod.rs  router.rs  rule.rs  task.rs
crates/anima-runtime/src/context/: manager.rs  mod.rs  storage.rs  (+1 more)
crates/anima-runtime/tests/: agent_classifier_orchestrator.rs  agent_phase4.rs  agent_pools.rs  agentic_loop_compact.rs  agentic_loop_integration.rs  agentic_loop_streaming.rs  ai_classifier_p1.rs  batch1_cache_context_channel.rs  bootstrap.rs  builtin_tools_integration.rs  bus_p0.rs  channel_adapter_http.rs  channel_adapter_rabbitmq.rs  channel_contracts.rs  circuit_breaker_p2.rs  cli_phase3.rs  context_assembly_phase1.rs  context_storage_p2.rs  dispatcher_contracts.rs  dispatcher_core_phase7.rs  dispatcher_phase7.rs  dispatcher_queue_scheduler.rs  e2e_scenario_A.rs  execution_driver_phase2.rs  intelligent_router_p3.rs  metrics_prometheus.rs  orchestrator_p2.rs  parallel_pool_p2.rs  parity_contracts.rs  pipeline_p1.rs  provider_opencode.rs  runtime_phase2.rs  runtime_state_store.rs  runtime_task_query.rs  session_store_p3.rs  specialist_pool_p2.rs  subtask_blocked_protocol.rs  support_phase5.rs  task_classifier_p4.rs  ttl_cache_p2.rs  (+2 more)
crates/anima-testkit/: Cargo.toml
crates/anima-testkit/src/: lib.rs
crates/anima-testkit/tests/: fake_executor.rs
crates/anima-web/: Cargo.toml
crates/anima-web/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/anima-web/src/: jobs.rs  jobs_derive.rs  jobs_store.rs  jobs_types.rs  lib.rs  main.rs  routes.rs  routes_commands.rs  routes_queries.rs  routes_static.rs  sse.rs  web_channel.rs  web_snapshot.rs
crates/anima-web/tests/: status_api.rs
(+177 files in other folders)
