[workspace]
members = [
    "crates/anima-types",
    "crates/anima-sdk",
    "crates/anima-runtime",
    "crates/anima-cli",
    "crates/anima-web",
    "crates/anima-testkit",
]
default-members = ["crates/anima-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["mirai"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
indexmap = { version = "2", features = ["serde"] }
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
regex = "1"
lazy_static = "1"
