[package]
name = "anima-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anima-sdk = { path = "../anima-sdk" }
anima-types = { path = "../anima-types" }
anima-runtime = { path = "../anima-runtime" }
